# u-boot-bl30-rtos_sdk-boards-riscv

./: CMakeLists.txt  Kconfig  board_version.c  build_combination.in
a4_skt/: FreeRTOSConfig.h  Kconfig  defconfig  power.c
am301_t950d4/: CMakeLists.txt  FreeRTOSConfig.h  Kconfig  btwake.c  compiler_options.cmake  defconfig  hw_business.c  keypad.c  power.c
at301_t962d4/: FreeRTOSConfig.h  Kconfig  btwake.c  defconfig  hw_business.c  keypad.c  lscript.ld  power.c
at309_t962d4/: CMakeLists.txt  FreeRTOSConfig.h  Kconfig  btwake.c  compiler_options.cmake  defconfig  fsm.c  hw_business.c  hw_business.h  keypad.h  lscript.h  power.c  power.h
av400_a113x2/: CMakeLists.txt  FreeRTOSConfig.h  Kconfig  defconfig  hw_business.c  hw_business.h  keypad.c  keypad.h  lscript.h  lscript.ld  power.c
av409_a113x2/: FreeRTOSConfig.h  Kconfig  defconfig  hw_business.c  keypad.c  power.c  power.h
ax201_s928x/: FreeRTOSConfig.h  Kconfig  defconfig  hw_business.c  keypad.c  power.c
ax208_s928x/: FreeRTOSConfig.h  Kconfig  defconfig  hw_business.c  keypad.c  keypad.h  power.c
ax209_s928x/: FreeRTOSConfig.h  Kconfig  defconfig  hw_business.c  power.c
ay301_t963d4/: FreeRTOSConfig.h  Kconfig  keypad.c  lscript.ld  power.c
ay309_t963d4/: FreeRTOSConfig.h  Kconfig  hw_business.c  keypad.c  power.c
ba400_a113l2/: FreeRTOSConfig.h  Kconfig  hw_business.c  keypad.c  power.c
ba409_a113l2/: FreeRTOSConfig.h  Kconfig  hw_business.c  keypad.c  power.c
bc302_t968d4/: FreeRTOSConfig.h  Kconfig  hw_business.c  power.c
bc303_t968d4/: Kconfig  power.c
bc309_t968d4/: Kconfig  (+1 more)
(+78 files in other folders)
